--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ authors = [
     { name = "Per Unneberg", email = "per.unneberg@scilifelab.se" }
 ]
 dependencies = [
-    "panel~=1.4.5",
+    "panel~=1.5.2",
     "tskit~=0.5.8",
     "tszip~=0.2.5",
     "click~=8.1.7",
@@ -14,13 +14,13 @@ dependencies = [
     "numba~=0.60.0",
     "diskcache~=5.6.3",
     "appdirs~=1.4.4",
-    "geoviews~=1.12.0",
+    "geoviews~=1.13.0",
     "cartopy~=0.23.0",
     "geopandas~=1.0.1",
     "dask[dataframe]~=2024.8.1",
-    "hvplot~=0.10.0",
+    "hvplot~=0.11.0",
     "xyzservices~=2024.6.0",
-    "tsbrowse @ git+https://github.com/tskit-dev/tsbrowse",
+    "tsbrowse @ git+https://github.com/tskit-dev/tsbrowse@2faab76ad3a1f4bb51e6a39ce1c244dc1ac8209b",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
