--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: eifinger/setup-rye@v3
-      - run: rye pin $
+      - run: rye pin ${{ matrix.py }}
       - run: |
           rye sync
           [[ -n $(git diff --stat requirements.lock) ]] && exit 1
