--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ authors = [
     { name = "Per Unneberg", email = "per.unneberg@scilifelab.se" }
 ]
 dependencies = [
-    "panel~=1.5.2",
+    "panel~=1.5.3",
     "tskit~=0.5.8",
     "tszip~=0.2.5",
     "click~=8.1.7",
@@ -46,12 +46,13 @@ packages = ["src/tseda"]
 managed = true
 dev-dependencies = [
     "jupyter~=1.0.0",
-    "pyright~=1.1.386",
+    "pyright~=1.1.388",
     "pytest~=8.3.2",
     "stdpopsim~=0.2.0",
     "geodatasets~=2024.7.0",
     "pip~=24.2",
     "hatch-vcs~=0.4.0",
+    "watchfiles~=0.24.0",
 ]
 
 [project.scripts]
@@ -96,4 +97,4 @@ test = "rye test"
 all = { chain = ["fmt", "lint", "check", "test"] }
 
 [tool.pytest.ini_options]
-addopts = "--doctest-modules"
+addopts = "--doctest-modules --ignore src/tseda/main.py"
