--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - run: |
           rye sync
           # [[ -n $(git diff --stat requirements.lock) ]] && exit 1
-      - run: playwright install
+      - run: rye run playwright install
       - run: rye fmt --check $( find src/tseda -name "*.py" | grep -v _version.py )
       - run: rye lint src
       - run: rye run check
