Fix syntax for pytest args

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,7 +94,7 @@ reportArgumentType = false
 fmt = "rye fmt"
 lint = "rye lint src --fix"
 check = "pyright"
-test = "rye test --tracing=retain-on-failure"
+test = "rye test"
 all = { chain = ["fmt", "lint", "check", "test"] }
 
 [tool.pytest.ini_options]
