--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - run: rye fmt --check $( find src/tseda -name "*.py" | grep -v _version.py )
       - run: rye lint src
       - run: rye run check
-      - run: rye run test
+      - run: rye run test -- --tracing=retain-on-failure
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
