Deprecate pages module and update docs and tests (#29)
* Deprecate pages module and update docs and tests

* Add playwright install

* Run playwright in rye venv

* Capture playwright test output

* Fix syntax for pytest args

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,13 @@ jobs:
       - run: |
           rye sync
           # [[ -n $(git diff --stat requirements.lock) ]] && exit 1
+      - run: rye run python -m playwright install --with-deps
       - run: rye fmt --check $( find src/tseda -name "*.py" | grep -v _version.py )
       - run: rye lint src
       - run: rye run check
-      - run: rye run test
+      - run: rye run test -- --tracing=retain-on-failure
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-traces
+          path: test-results/
