Documentation and API updates (#20)
* Pin all versions

* Change rye for uv in pyproject

* Fix map color issue

* Fix uv dependencies, add pixi linting toolchain

* Update ci workflow

* Add pixi lock file

* Add uv lock file

* Add playwright CI install

* Lint all sources

* Update packages to latest compatible with tsbrowse

* Remove tsbrowse dependency, update holoviz versions

* Use tseda model in tests

* Set minimum map height to prevent collapsing plot

* Fix geomap sizing issues

Add min height to panel components to at least improve rendering
somewhat.

* Add docs to CI

* Run Quarto in pixi quarto environment

* Add docs

* Run quarto from pixi environment

* Add tseda kernel

* Run command in quarto environment

* Fix quarto publish path

* Publish docs

* Remove gh-pages argument

* Readd docs argument

* Add pixi development tasks

* Update manifest and use tseda tsdate files for testing

* Fix class selector error in development mode

Class selectors cannot be defined as parameters for datastore and some
of the View subclasses and have been refactored into regular python
function parameters.

* Arrange population_from and sample_set_to widgets in column

* Fix sizing mode for haplotype plots

* Remove daiquiri dependency and add custom logger

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [project]
 name = "tseda"
+dynamic = ["version"]
 description = "Tree sequence exploratory data analysis"
 authors = [{ name = "Per Unneberg", email = "per.unneberg@scilifelab.se" }]
 dependencies = [
@@ -7,7 +8,6 @@ dependencies = [
   "tskit>=0.6.0",
   "tszip>=0.2.4",
   "click>=8.2.1",
-  "daiquiri>=3.2.5.1",
   "holoviews>=1.19.1",
   "numba>=0.61.2",
   "diskcache>=5.6.3",
@@ -24,7 +24,31 @@ dependencies = [
 ]
 readme = "README.md"
 requires-python = ">= 3.12"
-dynamic = ["version"]
+classifiers = [
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3 :: Only",
+  "Development Status :: 3 - Alpha",
+  "Environment :: Other Environment",
+  "Intended Audience :: Science/Research",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: POSIX",
+  "Operating System :: MacOS :: MacOS X",
+  "Topic :: Scientific/Engineering",
+  "Topic :: Scientific/Engineering :: Bio-Informatics",
+]
+keywords = [
+  "population genetics",
+  "tree sequence",
+  "ancestral recombination graph",
+  "evolutionary tree",
+  "statistical genetics",
+  "phylogenetics",
+  "tskit",
+  "visualization",
+]
 
 [dependency-groups]
 dev = [
@@ -94,7 +118,7 @@ addopts = "--doctest-modules --ignore src/tseda/main.py"
 
 [tool.pixi.workspace]
 channels = ["conda-forge", "bioconda"]
-platforms = ["linux-64"]
+platforms = ["linux-64", "osx-64"]
 
 [tool.pixi.pypi-dependencies]
 tseda = { path = ".", editable = true }
@@ -103,7 +127,7 @@ tseda = { path = ".", editable = true }
 default = { solve-group = "default" }
 dev = { features = ["dev"], solve-group = "default" }
 lint = { features = ["lint"], solve-group = "default" }
-quarto = ["quarto"]
+quarto = { features = ["quarto"], solve-group = "default" }
 
 [tool.pixi.feature.lint.dependencies]
 pre-commit = ">=4.2.0,<5"
@@ -115,22 +139,23 @@ actionlint = ">=1.7.7,<2"
 go-shfmt = ">=3.11.0,<4"
 prettier = ">=3.5.3,<4"
 taplo = ">=0.9.3,<0.10"
+mypy = ">=1.18.2,<2"
 
 [tool.pixi.feature.lint.tasks]
-actionlint = { cmd = "actionlint", env = { SHELLCHECK_OPTS = "-e SC2086" } }
-lintall = { cmd = "pre-commit run --all-files --hook-stage=manual", description = "Run all linters and formatters on all code" }
-lint = { cmd = "pre-commit run --hook-stage=manual", description = "Run all linters and formatters on staged code" }
-pre-commit-install = "pre-commit install --install-hooks -t=pre-commit -t=pre-push"
-pre-commit-install-minimal = "pre-commit install -t=pre-commit"
-pre-commit-run = "pre-commit run --all-files"
-prettier-fmt = { cmd = "prettier --write" }
-ruff-format = "ruff format --force-exclude"
-ruff-lint = "ruff check --fix --exit-non-zero-on-fix --force-exclude"
-shell-format = "shfmt --write --indent=4 --simplify --binary-next-line"
-toml-format = { cmd = "taplo fmt", env = { RUST_LOG = "warn" } }
-toml-lint = "taplo lint --verbose **/pixi.toml"
-typecheck-python = "mypy"
-typos = "typos --write-changes --force-exclude"
+actionlint = { cmd = "actionlint", env = { SHELLCHECK_OPTS = "-e SC2086" }, description = "Lint github actions file." }
+lintall = { cmd = "pre-commit run --all-files --hook-stage=manual", description = "Run all linters and formatters on all code." }
+lint = { cmd = "pre-commit run --hook-stage=manual", description = "Run all linters and formatters on staged code." }
+pre-commit-install = { cmd = "pre-commit install --install-hooks -t=pre-commit -t=pre-push", description = "Install pre-commit dependencies." }
+pre-commit-install-minimal = { cmd = "pre-commit install -t=pre-commit", description = "Install minimal list of pre-commit dependencies." }
+pre-commit-run = { cmd = "pre-commit run --all-files", description = "Run pre-commit on all files." }
+prettier-fmt = { cmd = "prettier --write", description = "Run prettier code formatter." }
+ruff-format = { cmd = "ruff format --force-exclude", description = "Run ruff Python formatter." }
+ruff-lint = { cmd = "ruff check --fix --exit-non-zero-on-fix --force-exclude", description = "Run ruff Python linter." }
+shell-format = { cmd = "shfmt --write --indent=4 --simplify --binary-next-line", description = "Run a shell formatter." }
+toml-format = { cmd = "taplo fmt **/*.toml", env = { RUST_LOG = "warn" }, description = "Run taplo toml formatter." }
+toml-lint = { cmd = "taplo lint --verbose **/*.toml", description = "Run taplo toml linter." }
+typecheck-python = { cmd = "mypy", description = "Run mypy Python type checker." }
+typos = { cmd = "typos --write-changes --force-exclude", description = "Run typos checker." }
 
 [tool.pixi.feature.quarto.dependencies]
 quarto = "*"
@@ -144,3 +169,27 @@ cmd = "quarto preview docs --port {{port}}"
 
 [tool.pixi.feature.quarto.tasks.rd]
 cmd = "quarto render docs"
+
+[tool.pixi.feature.dev.tasks.dev]
+args = [
+  { "arg" = "port", default = "8881" },
+  { "arg" = "input", default = "tests/data/test.trees.tsdate.tseda" },
+]
+cmd = "uv run panel serve src/tseda --dev --show --port {{port}} --args {{input}}"
+
+[tool.pixi.feature.dev.tasks.admin]
+args = [
+  { "arg" = "port", default = "8882" },
+  { "arg" = "input", default = "tests/data/test.trees.tsdate.tseda" },
+]
+cmd = "uv run python -m tseda serve {{input}} --admin --port {{port}}"
+
+[tool.pixi.feature.dev.tasks.serve]
+args = [
+  { "arg" = "port", default = "8883" },
+  { "arg" = "input", default = "tests/data/test.trees.tsdate.tseda" },
+]
+cmd = "uv run python -m tseda serve {{input}} --port {{port}}"
+
+[tool.pixi.tasks]
+test = "uv run pytest -v -s"
